  monster and it hits a door."
* Fix wielding of a cockatrice corpse bare-handed while wearing chromatic dragon
  scales or scale mail not triggering petrification.
* Fix leaking of descriptions of prizes selected from level memory with far-look
  after the prize itself has vanished.
* Fix contents of containers created on special levels not being included in the
  initial container weight.

Monsters
--------
* Instant petrification completely replaced with delayed petrification: you will
  always have a few turns to save yourself from instant death.
* Drowning attacks give two turns for players to react before instant death (was
  one turn); a monster "pulls you towards the water" before it drowns you.
* Metallivores and disintegrators can eat through iron bars (from UnNetHack).
* Allow Demogorgon to be bribed, since his lair is now guaranteed.
* Tone back demon bribery amounts inherited from UnNetHack: demons now only ask
  for 1000 to 2000 gold.
    - Giving within 80% of the money demanded for a demon bribe succeeds between
      25% to 75% of the time depending on how close your offer is to the
      demanded amount.
* Tone back 1-to-1 initial monster population difficulty inherited from
  NetHack4: it is now only like that for the first 10 levels, then 1-to-2 for
  the remainder.  This gives a progression similar to that of NetHack.
* Tone back on the effect of a monster's level on its raw spell damage;
  otherwise Asmodeus cold spell-casting attack could do over twice the damage of
  Master Kaen without cold resistance, which is too much even for overprepared
  characters.
* Pets never displace the player from the stairs when entering a level.
* Fix monsters getting your racial armor bonuses instead of theirs.

Interface
---------
* More messages for things that used to happen silently:
    - Show message when teleported without teleport control.
    - Show message when searching finds secret doors or corridors.